   Make build callbacks static.
   Add treeviews_init() to prepare popup menus and open files treeview.
   Replace treeviews_find_node() with treeviews_select_openfiles_item().
   Make utils_isbrace() and utils_is_opening_brace() take an
   'include_angles' argument (to separate from editor_prefs).
   Make 'Goto matching brace' keybinding include <> angle brackets.


2007-08-22  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * plugins/export.c:
   Fix some minor LaTeX code errors.
   Add generation date to HTML header and as comment in the generated
   LaTeX code.


2007-08-21  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/editor.h: Remove unused struct.


2007-08-19  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * plugins/export.c, plugins/Makefile.am, plugins/makefile.win32,
   po/POTFILES.in, src/plugins.c, src/plugindata.h:
   New plugin: Export as HTML and LaTeX.
   Add some functions to the plugin API needed by the Export plugin.
 * src/utils.c: Include error code string in the debug message if a file
                could not be written.


2007-08-17  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/plugins.c:
   Apply patch from Jeff Pohlmeyer to fix warning when unloading plugins
   that use signals when quitting (thanks).
 * tagmanager/get.c:
   Fix parsing C macro argument list.


2007-08-16  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/msgwindow.c:
   Apply patch from Jon Senior to fix parsing Apache Ant compiler
   error messages (thanks).
 * src/interface.c, src/prefs.c, src/keyfile.c, src/main.c, src/main.h,
   geany.glade:
   Add 'Enable plugin support' Prefs checkbox.
   Minor edit of load VTE option text.
 * scintilla/include/Scintilla.h, scintilla/Editor.cxx,
   scintilla/ScintillaGTK.cxx, src/document.c, doc/geany.txt:
   Use sci_assign_cmdkey() to set GtkEntry-like word boundary handling.
   Clear unnecessary default Scintilla Ctrl-D duplicate keybinding.